# Apex

./: .gitignore  README.md  pyproject.toml
api_server/: .gitignore  requirements.txt
api_server/app/: main.py
api_server/core/: config.py
api_server/routers/: order.py
cmd/: main.cpp
config/: config.json  sample_config.json
docs/: benchmark.md  optimization.md  perfomance_metrics.md
include/: api_client.hpp  config.hpp  logger.hpp  websocket_server.hpp
scripts/: run.sh
src/: api_client.cpp  config.cpp  latency_benchmark.cpp  logger.cpp  order_manager.cpp  websocket_server.cpp
trading_engine/: CMakeLists.txt
trading_engine/cmd/: main.cpp
trading_engine/config/: sample_config.json
trading_engine/include/: api_client.hpp  latency_benchmark.hpp  order_manager.hpp  websocket_server.hpp
trading_engine/scripts/: build.sh  build_pybind.sh  clean_build.sh
trading_engine/src/: api_client.cpp  config.cpp  latency_benchmark.cpp  order_manager.cpp  python_bindings.cpp
